# wispers-client

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Package.swift  README.md  TODO.md  flake.nix
.github/workflows/: build-cli-binaries.yml  build-go-libs.yml  ci.yml  publish-python.yml  verify-release.yml
docs/: FAQ.md  HOW_IT_WORKS.md  HOW_TO_USE.md  INTERNALS.md
docs/images/: monitoring-topo.excalidraw  remote-app-access-diagram.excalidraw  wispers-activation-phase1.excalidraw  wispers-activation-phase2.excalidraw  wispers-connect-components.excalidraw  wispers-connection-establishment.excalidraw  wispers-files-topo.excalidraw  wispers-registration-collab.excalidraw
examples/: ffi_demo  ffi_demo.c
examples/c/: ffi_demo.c
examples/go/: .gitignore  go.mod  main.go
examples/kotlin/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
examples/kotlin/app/: build.gradle.kts
examples/kotlin/app/src/main/: AndroidManifest.xml
examples/kotlin/app/src/main/kotlin/dev/wispers/connect/example/: MainActivity.kt  QuicConnectionManager.kt  QuicWebViewClient.kt
examples/kotlin/app/src/main/res/layout/: activity_main.xml
examples/kotlin/app/src/main/res/values/: strings.xml  themes.xml
examples/python/: ping.py  run.sh
include/: wispers_connect.h
proto/: hub.proto  roster.proto
scripts/: build-release-artifacts.sh  install.ps1  install.sh
src/: lib.rs  state.rs
src/ffi/: handles.rs  manager.rs  mod.rs
wcadm/: Cargo.toml
wcadm/src/: main.rs
wconnect/: Cargo.toml  TODO.md
wconnect/src/: daemon.rs  ipc.rs  main.rs  p2p.rs  proxy_common.rs  proxy_http.rs  proxy_socks.rs  serving.rs
wispers-connect/: Cargo.toml  build.rs  cbindgen.toml
wispers-connect/examples/: Makefile  ffi_demo.c  ffi_test.c
wispers-connect/include/: wispers_connect.h
wispers-connect/proto/: hub.proto  roster.proto  storage.proto
wispers-connect/src/: crypto.rs  encryption.rs  errors.rs  hub.rs  ice.rs  juice.rs  lib.rs  node.rs  p2p.rs  p2p_signing.rs  quic.rs  roster.rs  serving.rs  state.rs  types.rs
wispers-connect/src/ffi/: callbacks.rs  handles.rs  helpers.rs  manager.rs  mod.rs  node.rs  nodes.rs  p2p.rs  runtime.rs  serving.rs  types.rs
wispers-connect/src/storage/: codec.rs  file.rs  foreign.rs  in_memory.rs  mod.rs
wispers-connect/tests/: p2p_integration.rs
wispers-connect/tests/c_ffi/: ffi_test.c
wispers-connect/tests/common/: mod.rs
wrappers/go/: Makefile  bridge.go  errors.go  go.mod  handle.go  node.go  quic.go  serving.go  shims.go  storage.go  udp.go  wispers.go  wispers_connect.h  wispers_helpers.h  wispers_test.go
wrappers/go/cmd/fetch-lib/: main.go
wrappers/go/lib/: wispers_connect.h
wrappers/kotlin/: build.gradle.kts  proguard-rules.pro  settings.gradle.kts
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/: WispersConnect.kt
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/handles/: Node.kt  ServingSession.kt  Storage.kt
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/internal/: CallbackBridge.kt  NativeCallbacks.kt  NativeLibrary.kt  NativeTypes.kt
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/storage/: NodeStorageCallbacks.kt
wrappers/kotlin/src/main/kotlin/dev/wispers/connect/types/: Exceptions.kt  GroupStatus.kt  NodeInfo.kt  NodeState.kt  RegistrationInfo.kt  ServingStatus.kt  Status.kt  TtlProfile.kt
wrappers/kotlin/src/test/kotlin/dev/wispers/connect/: CallbackBridgeTest.kt  TypesTest.kt
wrappers/python/: pyproject.toml
wrappers/python/wispers_connect/: __init__.py  _bridge.py  _ffi.py  _library.py  _structs.py  aio.py  exceptions.py  node.py  serving.py  types.py
wrappers/swift/: .gitignore  Package.swift
wrappers/swift/Sources/CWispersConnect/: shim.c
wrappers/swift/Sources/CWispersConnect/include/: module.modulemap  wispers_connect.h
wrappers/swift/Sources/WispersConnect/: CallbackBridge.swift  Errors.swift  Handle.swift  Node.swift  QuicConnection.swift  QuicStream.swift  ServingSession.swift  Storage.swift  StorageCallbacks.swift  Types.swift  UdpConnection.swift
wrappers/swift/scripts/: build-xcframework.sh
