[package]
name = "wispers_connect_client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3"
rand = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
urlencoding = "2.1"
zeroize = "1.8"
