[package]
name = "wconnect"
version = "0.1.0"
edition = "2024"
description = "CLI for Wispers Connect nodes"

[[bin]]
name = "wconnect"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
httparse = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal"] }
wispers-connect = { path = "../wispers-connect" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
rand = "0.9"
