[package]
name = "wconnect"
version = "0.8.1-rc2"
edition = "2024"
license = "MIT"
authors = ["Matthias Scheidegger <mbs@s-te.ch>"]
homepage = "https://wispers.dev"
repository = "https://github.com/s-te-ch/wispers-client"
description = "Wispers Connect connectivity test and sidecar utility"

[[bin]]
name = "wconnect"
path = "src/main.rs"

# cargo-binstall metadata. Resolves to the archives produced by
# .github/workflows/build-cli-binaries.yml; the binary is at the
# archive root (not in a versioned subdirectory).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
httparse = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "fs", "signal"] }
wispers-connect = { path = "../wispers-connect", version = "0.8.1-rc2" }

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[target.'cfg(windows)'.dependencies]
rand = "0.9"
