[package]
name = "wispers-connect"
version = "0.8.0-rc5"
edition = "2024"
license = "MIT"
authors = ["Matthias Scheidegger <mbs@s-te.ch>"]
homepage = "https://wispers.dev"
repository = "https://github.com/s-te-ch/wispers-client"
description = "Client library for Wispers Connect"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
aes-gcm = "0.10"
log = "0.4"
boring = "4"
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
hkdf = "0.12"
hmac = "0.12"
http = "1"
num-bigint = "0.4"
prost = "0.13"
quiche = { version = "0.24", features = ["boringssl-boring-crate"] }
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls-native-roots", "tls-webpki-roots"] }
urlencoding = "2.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1.8"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
tonic-build = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
async-stream = "0.3"
