[package]
name = "wispers-connect"
version = "0.9.0"
edition = "2024"
license = "MIT"
authors = ["Matthias Scheidegger <mbs@s-te.ch>"]
homepage = "https://wispers.dev"
repository = "https://github.com/s-te-ch/wispers-client"
description = "Client library for Wispers Connect"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
# TEMP: enables tokio's runtime task dump for the stall watchdog (see
# `dump_runtime_tasks` in quic.rs). tokio only allows this feature when built
# with RUSTFLAGS="--cfg tokio_unstable" on linux aarch64/x86/x86_64, so the
# feature is self-enforcing — enabling it on any other build fails loudly.
taskdump = ["tokio/taskdump"]

# TEMP: build libjuice with JUICE_DISABLE_CONSENT_FRESHNESS=1, disabling the RFC
# 7675 consent-freshness teardown. Used to test whether the ~30s consent-expiry
# churn on flaky/multi-homed paths is what stalls access. Data-plane liveness is
# still covered by QUIC's idle timeout + keepalives + the pool.
disable-consent-freshness = []

[dependencies]
aes-gcm = "0.10"
log = "0.4"
boring = "4"
dirs = "5"
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
hkdf = "0.12"
hmac = "0.12"
http = "1"
num-bigint = "0.4"
prost = "0.13"
quiche = { version = "0.24", features = ["boringssl-boring-crate"] }
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["tls-native-roots", "tls-webpki-roots"] }
urlencoding = "2.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
zeroize = "1.8"

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
tonic-build = "0.12"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"

[dev-dependencies]
async-stream = "0.3"
# Tests use #[tokio::test(flavor = "multi_thread")] plus a timeout, so they need
# the multi-thread runtime, the test macro, and timers spelled out explicitly.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
