[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "wispers-connect"
version = "0.8.0"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Matthias Scheidegger", email = "mbs@s-te.ch"}]
description = "Python wrapper for the Wispers Connect peer-to-peer connectivity library"

[project.urls]
Homepage = "https://wispers.dev"
Repository = "https://github.com/s-te-ch/wispers-client"

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[tool.maturin]
manifest-path = "../../wispers-connect/Cargo.toml"
python-packages = ["wispers_connect"]
module-name = "wispers_connect._native"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.mypy]
python_version = "3.11"
strict = true
